# Raytracer

./: .gitignore  CMakeLists.txt  README.md  RUN_INSTRUCTIONS.md  SCRIPT_STRUCTURE.md  build_windows.bat  launcher.bat  launcher.sh  run_projects.bat
A0/: A0.cpp  Main.cpp  README.md
A1/: A1.cpp  A1.hpp  Main.cpp  README.md  maze.cpp
A2/: A2.cpp  A2.hpp  Main.cpp  README.md
A3/: A3.cpp  A3.hpp  GeometryNode.cpp  Main.cpp  README.md
A3/Assets/: VertexShader.vs  a3mark.lua  puppet.lua  puppetTest.lua  sceneTest.lua
A4/: .nfs000009000b023fe60000002d  .nfs000009000b0e2d3a0000024d  .nfs000009000b2eb73800000254  .nfs000009000b2eb8b300000b9b  .nfs000009000b2f649a00000f5e  .nfs000009000b3051ea000014e6  A4.cpp  A4.hpp  GeometryNode.cpp  GeometryNode.hpp  HitRecord.hpp  Image.cpp  Image.hpp  Mesh.cpp  Mesh.hpp  PhongMaterial.cpp  PhongMaterial.hpp  Primitive.cpp  Primitive.hpp  README.md  RayTracer.hpp  SceneNode.cpp  SceneNode.hpp  dbgPrint.hpp  polyroots.cpp  sample.lua
A4/Assets/: macho-cows.lua  nonhier.lua  nonhier2.lua  sample.lua  simple.lua  test.lua
A4/prAssets/: Sphere_frame_locations.csv  ball_Control_frame_locations.csv  final_animation.lua  moon_frame_locations.csv  practice.lua
scripts/: run_A0.bat  run_A0.sh  run_A1.bat  run_A1.sh  run_A2.bat  run_A2.sh  run_A3.bat  run_A3.sh  run_A4.bat  run_A4.sh  run_assignment.bat  run_assignment.sh
shared/cs488-framework/: OpenGLImport.hpp
